--- a/package.json
+++ b/package.json
@@ -8,6 +8,18 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@react-aria/button": "^3.3.2",
+    "@react-aria/focus": "^3.3.0",
+    "@react-aria/interactions": "^3.4.0",
+    "@react-aria/listbox": "^3.2.5",
+    "@react-aria/overlays": "^3.6.3",
+    "@react-aria/select": "^3.3.2",
+    "@react-aria/utils": "^3.8.0",
+    "@react-stately/collections": "^3.3.2",
+    "@react-stately/list": "^3.2.3",
+    "@react-stately/menu": "^3.2.2",
+    "@react-stately/select": "^3.1.2",
+    "@react-types/button": "^3.3.1",
     "classnames": "^2.3.1",
     "next": "latest",
     "next-images": "^1.7.0",
