--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "autoprefixer": "^10.2.5",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "postcss": "^8.2.15",
     "tailwindcss": "^2.1.2",
     "typescript": "4.0"
