--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "@react-types/button": "^3.3.1",
     "classnames": "^2.3.1",
     "next": "latest",
-    "next-images": "^1.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hotkeys-hook": "^3.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.2",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
