--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
+    "build:ci": "./cleanCache.sh",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc"
