--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
-    "build:ci": "./build.sh",
+    "build:ci": "del-cli -f .next/cache && next build",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc"
@@ -34,6 +34,7 @@
     "@types/react-dom": "^17.0.1",
     "autoprefixer": "^10.2.5",
     "babel-plugin-inline-react-svg": "^2.0.1",
+    "del-cli": "^3.0.1",
     "postcss": "^8.2.15",
     "tailwindcss": "^2.1.2",
     "typescript": "4.0"
