--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-aria/listbox": "^3.2.5",
     "@react-aria/overlays": "^3.6.3",
     "@react-aria/select": "^3.3.2",
+    "@react-aria/ssr": "^3.0.2",
     "@react-aria/utils": "^3.8.0",
     "@react-stately/collections": "^3.3.2",
     "@react-stately/list": "^3.2.3",
